     FIXED: Use hardware frequency in IQ file names.
     FIXED: FFT averaging (it can now be disabled).
     FIXED: "Could not resolve pattern10600" error messages in the terminal.
     FIXED: Antenna selection error with USRP B210 (Ethan Trewhitt).
     FIXED: LNB LO value not updated in I/O config dialog.
     FIXED: Initial gain of rtlsdr devices is no longer 0 dB.
  IMPROVED: Support up to 1M point FFT.
  IMPROVED: Fractional PPM correction.
  IMPROVED: AGC peformance.
  IMPROVED: FFT performance.
  IMPROVED: Right click on frequency digit to clear digits.

     2.3.2  Released November 28, 2014

     FIXED: Pandapter and waterfall widths are limited to 4096 pixels.
  IMPROVED: Add 2.5 Msps preset for Airspy.

     2.3.1  Released August 8, 2014

     FIXED: Use correct categories in .desktop file.


     2.3.0  Released August 5, 2014

       NEW: Support for setting analog bandwidth.
       NEW: Support for setting gain stages individually.
       NEW: Remember visibility status of main toolbar.
       NEW: Restore the geometry of the main window between sessions.
       NEW: Restore the state and placement of the dock windows.
       NEW: Nuand BladeRF support.
       NEW: RF Space SDR-IQ, SDR-IP and Netsdr support.
       NEW: Airspy support.
       NEW: Peak detection on the FFT plot.
       NEW: Max hold on the FFT plot.
       NEW: Audio streaming over UDP socket.
       NEW: Remote control through TCP socket.
       NEW: Set squelch level from current signal/noise level.
       NEW: Command line option to list existing configurations.
       NEW: I/Q recording and playback.
     FIXED: Incorrect handling of decimal values in LNB LO frequency.
     FIXED: Correctly apply initial LNB LO frequency.
     FIXED: Audio output device selection on Mac OS X.
     FIXED: Properly store settings when using Save As function.
     FIXED: Crash when recording audio whith no rec directory set.
     FIXED: Only allow audio playback while DSP is running.