@@ -16,6 +16,7 @@
      FIXED: Antenna selection error with USRP B210 (Ethan Trewhitt).
      FIXED: LNB LO value not updated in I/O config dialog.
      FIXED: Initial gain of rtlsdr devices is no longer 0 dB.
+     FIXED: DSP freeze when setting FM de-emphasis time constant to 0.
   IMPROVED: Support up to 1M point FFT.
   IMPROVED: Fractional PPM correction.
   IMPROVED: AGC peformance.
